# scgms-release

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-build-all.yml
PathFinder_test/: CMakeLists.txt
PathFinder_test/src/: main.cpp  objectives.cpp  objectives.h  solvers.cpp  solvers.h  stats.cpp  stats.h
